// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Label"
>
  Hello world
</p>
`;

exports[`composition hook should return with Label props 1`] = `
Object {
  "className": "css-1h55yw6 css-63it0p css-1qnz8fc bb-Box bb-Label",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Label"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

<label
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Label"
>
  hello world
</label>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<label
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Label"
>
  Hello world
</label>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

<label
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Label"
>
  Hello world
</label>
`;

exports[`props should render correctly with a htmlFor attribute 1`] = `
.emotion-0 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<label
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Label"
  for="test"
>
  Hello world
</label>
`;

exports[`theming Label.base should render correctly 1`] = `
.emotion-0 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<label
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Label"
>
  hello world
</label>
`;
